--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.App {
+  min-height: 100vh;
+  display: flex;
+}
+
 .sidebar {
   flex: 3;
   border-right: 1px solid gray;
@@ -55,7 +60,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .addBtn {
