contiuing to build front end of ai

--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,26 @@ body {
   height: 1.75rem;
 }
 
+.lowerSide {
+  padding: 2rem;
+  
+}
+
+.listItems { 
+  margin: 0.8rem;
+  display: flex;
+  align-items: center;
+  font-size: 1.4rem;
+  background: transparent;
+  color: white;
+
+}
+
+.listItemsImg {
+  margin: 1rem;
+  padding-right: 1.5rem;
+}
+
+.listItems:nth-child(1)>.listItemsImg {
+  margin-right: 0.5rem;
+}
